tests/rosetta/out/Smalltalk/cholesky-decomposition-1.out
/tmp/cholesky-decomposition-1.st:6: parse error, expected ']'
